--- a/roles/ceph-mon/tasks/ceph_keys.yml
+++ b/roles/ceph-mon/tasks/ceph_keys.yml
@@ -112,7 +112,7 @@
     - /var/lib/ceph/bootstrap-mds/{{ cluster }}.keyring
   when:
     - cephx
-    - inventory_hostname == groups[mon_group_name]|last
+    - "{{ inventory_hostname == groups[mon_group_name] | last }}"
 
 - name: drop in a motd script to report status when logging in
   copy:
